@@ -452,7 +452,7 @@ int opreport(vector<string> const & non_options)
 		cg_container.populate(options::archive_path, iprofiles,
 			options::extra_found_images,
 			options::debug_info, options::threshold,
-			options::merge_by.lib);
+			options::merge_by.lib, options::symbol_filter);
 
 		output_cg_symbols(cg_container, multiple_apps);
 	} else {
