@@ -1,5 +1,13 @@
 2005-04-05  John Levon  <levon@movementarian.org>
 
+	* libpp/callgraph_container.h:
+	* libpp/callgraph_container.cpp:
+	* pp/opreport.cpp:
+	* pp/opreport_options.cpp: implement -i / -e for
+	  opreport -c
+
+2005-04-05  John Levon  <levon@movementarian.org>
+
 	* libpp/format_output.h:
 	* libpp/format_output.cpp:
 	* pp/opreport.cpp:
